// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PopularList test Test PopularList snapshot 1`] = `
<InfiniteScroll
  element="div"
  getScrollParent={null}
  hasMore={true}
  initialLoad={true}
  isReverse={false}
  loadMore={[Function]}
  loader={<WithStyles(Loading) />}
  pageStart={0}
  ref={null}
  threshold={250}
  useCapture={false}
  useWindow={true}
>
  <div
    className="PopularList-root-1"
  >
    <WithStyles(Grid)
      container={true}
      justify="center"
      spacing={8}
    />
  </div>
</InfiniteScroll>
`;

exports[`PopularList test Test PopularList snapshot 2`] = `
<InfiniteScroll
  element="div"
  getScrollParent={null}
  hasMore={true}
  initialLoad={true}
  isReverse={false}
  loadMore={[Function]}
  loader={<WithStyles(Loading) />}
  pageStart={0}
  ref={null}
  threshold={250}
  useCapture={false}
  useWindow={true}
>
  <div
    className="PopularList-root-1"
  >
    <WithStyles(Grid)
      container={true}
      justify="center"
      spacing={8}
    >
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1572/95010.jpg?s=88db8e76960fce4e7aaa69f71cfbb4cb"
        key="37991"
        mal_id={37991}
        title="JoJo no Kimyou na Bouken: Ougon no Kaze"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1301/93586.jpg?s=f19bb396363ae0caf8f1e1e8c17b49ac"
        key="37450"
        mal_id={37450}
        title="Seishun Buta Yarou wa Bunny Girl Senpai no Yume wo Minai"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/6/73245.jpg?s=f792b8c9e28534ae455d06b15e686a14"
        key="21"
        mal_id={21}
        title="One Piece"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1315/95173.jpg?s=439d822c3579889d8e1d03ed443e7ebf"
        key="38262"
        mal_id={38262}
        title="Pingu in the City (2018)"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1694/93337.jpg?s=c961d2c4b3cbb600d58e1bac55b4d854"
        key="37430"
        mal_id={37430}
        title="Tensei shitara Slime Datta Ken"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/7/75199.jpg?s=529dd40c117676c23a713a83ffc0a87f"
        key="235"
        mal_id={235}
        title="Detective Conan"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1536/93863.jpg?s=5a43e40468b24b466b535a8ea3fe688d"
        key="35972"
        mal_id={35972}
        title="Fairy Tail: Final Series"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1993/93837.jpg?s=5054e1f2d07192aad8470d3992640f6d"
        key="36474"
        mal_id={36474}
        title="Sword Art Online: Alicization"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/7/84463.jpg?s=265a04fdb2faa3aa7348d63dac7e89d9"
        key="33064"
        mal_id={33064}
        title="Uchuu Senkan Yamato 2202: Ai no Senshi-tachi"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/5/79008.jpg?s=d819d529dcee3ec4feceb26eeceb91a4"
        key="26123"
        mal_id={26123}
        title="Seitokai Yakuindomo* OVA"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1180/95018.jpg?s=12b7d72547e2687f32839d9cf06b0a03"
        key="37989"
        mal_id={37989}
        title="Golden Kamuy 2nd Season"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1131/90676.jpg?s=82a9aa81d37ae85b64fd482c353b8716"
        key="36963"
        mal_id={36963}
        title="IDOLiSH7 Vibrato"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1134/95151.jpg?s=1dc76172ae292eff9c4513a122a71932"
        key="38435"
        mal_id={38435}
        title="Yao Shen Ji 3rd Season"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1341/92872.jpg?s=c60c94910bc5263343b1d8662fdbb7ff"
        key="37873"
        mal_id={37873}
        title="BanG Dream! Garupa☆Pico"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/8/89981.jpg?s=78aa6561fd4286faaa66c01e73d77e94"
        key="37033"
        mal_id={37033}
        title="Emiya-san Chi no Kyou no Gohan"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1692/93918.jpg?s=e59dc486d48ca2ba6e41e083952d9464"
        key="37965"
        mal_id={37965}
        title="Kaze ga Tsuyoku Fuiteiru"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1783/96153.jpg?s=417ebf7092dad72389d824b840bf37b5"
        key="37786"
        mal_id={37786}
        title="Yagate Kimi ni Naru"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/10/59897.jpg?s=dcf5f566786bb2ee9b939a73322bcdfe"
        key="966"
        mal_id={966}
        title="Crayon Shin-chan"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1398/95679.jpg?s=92b15b08d6c765f50a9f60161bd71bf2"
        key="38528"
        mal_id={38528}
        title="Quanzhi Fashi 3rd Season"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1538/93566.jpg?s=7f44aea254dab48cb7688496c567112a"
        key="37822"
        mal_id={37822}
        title="Douluo Dalu 2nd Season"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/9/88676.jpg?s=fa06e95b8146ebe6a4ec924e8fc10739"
        key="36686"
        mal_id={36686}
        title="Hifuu Katsudou Kiroku: The Sealed Esoteric History"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1424/93855.jpg?s=581c9137cdaf2116e76a64bc5655fc44"
        key="37497"
        mal_id={37497}
        title="Irozuku Sekai no Ashita kara"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1220/92883.jpg?s=00f9fcafe63684de52244aacace6a12a"
        key="36593"
        mal_id={36593}
        title="Hug tto! Precure"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/6/23935.jpg?s=9a7d386aee4135bdf7ac10a70fbc4ce7"
        key="8687"
        mal_id={8687}
        title="Doraemon (2005)"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1949/93415.jpg?s=29d0e30ac98892bba2fda23b08c368a4"
        key="37349"
        mal_id={37349}
        title="Goblin Slayer"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1908/93416.jpg?s=2e060f209aea424695c35f79fd03a055"
        key="37475"
        mal_id={37475}
        title="Kishuku Gakkou no Juliet"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1866/91270.jpg?s=8bcb8969e43b1ab4c9287b0087dfc4f4"
        key="36934"
        mal_id={36934}
        title="Captain Tsubasa (2018)"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1583/93857.jpg?s=75e32a180baf3a6af8d2b5a489f621d1"
        key="36432"
        mal_id={36432}
        title="Toaru Majutsu no Index III"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1529/95627.jpg?s=96cdc6b17ca4063189cb46eda6474c81"
        key="37447"
        mal_id={37447}
        title="Karakuri Circus"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1974/95289.jpg?s=f7a184c751b856cb8f2154e59cdaee52"
        key="37007"
        mal_id={37007}
        title="Hinomaruzumou"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1360/93571.jpg?s=8c0dcfce18a91f77034317cc9a0bafa4"
        key="36653"
        mal_id={36653}
        title="Tsurune: Kazemai Koukou Kyuudoubu"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/10/79996.jpg?s=b77643f34b1369553c27d277bff3ccf2"
        key="23539"
        mal_id={23539}
        title="Gudetama"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/6/13508.jpg?s=0291c4832f41af34747d772c31526e68"
        key="6149"
        mal_id={6149}
        title="Chibi Maruko-chan (1995)"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1629/93729.jpg?s=41b57ae7b52d32986bd11de6d2a2f0aa"
        key="38235"
        mal_id={38235}
        title="Inazuma Eleven: Orion no Kokuin"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/13/87181.jpg?s=30409b8044a2939e3cb59c96ea7f3508"
        key="36064"
        mal_id={36064}
        title="Fate/Grand Order CMs"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1670/93590.jpg?s=2fc4ff4e22d52ec268b6f0b0d887f32a"
        key="38250"
        mal_id={38250}
        title="Xiao Lu He Xiao Lan"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1973/95616.jpg?s=76553c857f9850aa1f82527963291839"
        key="35847"
        mal_id={35847}
        title="SSSS.Gridman"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1408/96485.jpg?s=20fae3c4daea59a8e90d71ce1657138e"
        key="37476"
        mal_id={37476}
        title="Cardfight!! Vanguard (2018)"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1555/93865.jpg?s=6c8b8f5f46c39d9c6d3313ce986ade6d"
        key="36317"
        mal_id={36317}
        title="Gaikotsu Shotenin Honda-san"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1198/90430.jpg?s=d5ff39ae6932fc20c69f96e8d1dc3b32"
        key="37204"
        mal_id={37204}
        title="Aikatsu Friends!"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1445/95414.jpg?s=ddbd615d070fa37fac56f5f501e6df2c"
        key="38491"
        mal_id={38491}
        title="Xing Chen Bian"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/6/74028.jpg?s=a8002672b2eccb5cbf43f356d5de87b5"
        key="1199"
        mal_id={1199}
        title="Nintama Rantarou"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/2/84270.jpg?s=56facbc831546691107de27849b1f127"
        key="34535"
        mal_id={34535}
        title="Koisuru Shirokuma"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/3/27302.jpg?s=76cbb276fb39aa4e8ddd6d8303dc4218"
        key="9874"
        mal_id={9874}
        title="Touhou Niji Sousaku Doujin Anime: Musou Kakyou"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1402/95620.jpg?s=3075a58e5da0220977ba5d572cd30e9d"
        key="37597"
        mal_id={37597}
        title="Dakaretai Otoko 1-i ni Odosarete Imasu."
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1115/90222.jpg?s=a9ca5ddcc45681bab39a421264d3435b"
        key="37023"
        mal_id={37023}
        title="Layton Mystery Tanteisha: Katri no Nazotoki File"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/12/85484.jpg?s=a68d6868f07602c073985f50955caac3"
        key="21305"
        mal_id={21305}
        title="Trick or Alice"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1827/95738.jpg?s=d5d300be5ca7a5a61387e26b9acc4198"
        key="37716"
        mal_id={37716}
        title="Beelzebub-jou no Okinimesu mama."
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1470/90266.jpg?s=ffd8832a519a87dbe9598fcb26beb2f7"
        key="34941"
        mal_id={34941}
        title="Queen's Blade: Unlimited"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/9/84460.jpg?s=ae561b0c245d07556cbdfbbf1ee374a9"
        key="34566"
        mal_id={34566}
        title="Boruto: Naruto Next Generations"
      />
    </WithStyles(Grid)>
  </div>
</InfiniteScroll>
`;

exports[`PopularList test Test PopularList snapshot 3`] = `
<InfiniteScroll
  element="div"
  getScrollParent={null}
  hasMore={true}
  initialLoad={true}
  isReverse={false}
  loadMore={[Function]}
  loader={<WithStyles(Loading) />}
  pageStart={0}
  ref={null}
  threshold={250}
  useCapture={false}
  useWindow={true}
>
  <div
    className="PopularList-root-1"
  >
    <WithStyles(Grid)
      container={true}
      justify="center"
      spacing={8}
    >
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1572/95010.jpg?s=88db8e76960fce4e7aaa69f71cfbb4cb"
        key="37991"
        mal_id={37991}
        title="JoJo no Kimyou na Bouken: Ougon no Kaze"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1301/93586.jpg?s=f19bb396363ae0caf8f1e1e8c17b49ac"
        key="37450"
        mal_id={37450}
        title="Seishun Buta Yarou wa Bunny Girl Senpai no Yume wo Minai"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/6/73245.jpg?s=f792b8c9e28534ae455d06b15e686a14"
        key="21"
        mal_id={21}
        title="One Piece"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1315/95173.jpg?s=439d822c3579889d8e1d03ed443e7ebf"
        key="38262"
        mal_id={38262}
        title="Pingu in the City (2018)"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1694/93337.jpg?s=c961d2c4b3cbb600d58e1bac55b4d854"
        key="37430"
        mal_id={37430}
        title="Tensei shitara Slime Datta Ken"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/7/75199.jpg?s=529dd40c117676c23a713a83ffc0a87f"
        key="235"
        mal_id={235}
        title="Detective Conan"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1536/93863.jpg?s=5a43e40468b24b466b535a8ea3fe688d"
        key="35972"
        mal_id={35972}
        title="Fairy Tail: Final Series"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1993/93837.jpg?s=5054e1f2d07192aad8470d3992640f6d"
        key="36474"
        mal_id={36474}
        title="Sword Art Online: Alicization"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/7/84463.jpg?s=265a04fdb2faa3aa7348d63dac7e89d9"
        key="33064"
        mal_id={33064}
        title="Uchuu Senkan Yamato 2202: Ai no Senshi-tachi"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/5/79008.jpg?s=d819d529dcee3ec4feceb26eeceb91a4"
        key="26123"
        mal_id={26123}
        title="Seitokai Yakuindomo* OVA"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1180/95018.jpg?s=12b7d72547e2687f32839d9cf06b0a03"
        key="37989"
        mal_id={37989}
        title="Golden Kamuy 2nd Season"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1131/90676.jpg?s=82a9aa81d37ae85b64fd482c353b8716"
        key="36963"
        mal_id={36963}
        title="IDOLiSH7 Vibrato"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1134/95151.jpg?s=1dc76172ae292eff9c4513a122a71932"
        key="38435"
        mal_id={38435}
        title="Yao Shen Ji 3rd Season"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1341/92872.jpg?s=c60c94910bc5263343b1d8662fdbb7ff"
        key="37873"
        mal_id={37873}
        title="BanG Dream! Garupa☆Pico"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/8/89981.jpg?s=78aa6561fd4286faaa66c01e73d77e94"
        key="37033"
        mal_id={37033}
        title="Emiya-san Chi no Kyou no Gohan"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1692/93918.jpg?s=e59dc486d48ca2ba6e41e083952d9464"
        key="37965"
        mal_id={37965}
        title="Kaze ga Tsuyoku Fuiteiru"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1783/96153.jpg?s=417ebf7092dad72389d824b840bf37b5"
        key="37786"
        mal_id={37786}
        title="Yagate Kimi ni Naru"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/10/59897.jpg?s=dcf5f566786bb2ee9b939a73322bcdfe"
        key="966"
        mal_id={966}
        title="Crayon Shin-chan"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1398/95679.jpg?s=92b15b08d6c765f50a9f60161bd71bf2"
        key="38528"
        mal_id={38528}
        title="Quanzhi Fashi 3rd Season"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1538/93566.jpg?s=7f44aea254dab48cb7688496c567112a"
        key="37822"
        mal_id={37822}
        title="Douluo Dalu 2nd Season"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/9/88676.jpg?s=fa06e95b8146ebe6a4ec924e8fc10739"
        key="36686"
        mal_id={36686}
        title="Hifuu Katsudou Kiroku: The Sealed Esoteric History"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1424/93855.jpg?s=581c9137cdaf2116e76a64bc5655fc44"
        key="37497"
        mal_id={37497}
        title="Irozuku Sekai no Ashita kara"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1220/92883.jpg?s=00f9fcafe63684de52244aacace6a12a"
        key="36593"
        mal_id={36593}
        title="Hug tto! Precure"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/6/23935.jpg?s=9a7d386aee4135bdf7ac10a70fbc4ce7"
        key="8687"
        mal_id={8687}
        title="Doraemon (2005)"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1949/93415.jpg?s=29d0e30ac98892bba2fda23b08c368a4"
        key="37349"
        mal_id={37349}
        title="Goblin Slayer"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1908/93416.jpg?s=2e060f209aea424695c35f79fd03a055"
        key="37475"
        mal_id={37475}
        title="Kishuku Gakkou no Juliet"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1866/91270.jpg?s=8bcb8969e43b1ab4c9287b0087dfc4f4"
        key="36934"
        mal_id={36934}
        title="Captain Tsubasa (2018)"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1583/93857.jpg?s=75e32a180baf3a6af8d2b5a489f621d1"
        key="36432"
        mal_id={36432}
        title="Toaru Majutsu no Index III"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1529/95627.jpg?s=96cdc6b17ca4063189cb46eda6474c81"
        key="37447"
        mal_id={37447}
        title="Karakuri Circus"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1974/95289.jpg?s=f7a184c751b856cb8f2154e59cdaee52"
        key="37007"
        mal_id={37007}
        title="Hinomaruzumou"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1360/93571.jpg?s=8c0dcfce18a91f77034317cc9a0bafa4"
        key="36653"
        mal_id={36653}
        title="Tsurune: Kazemai Koukou Kyuudoubu"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/10/79996.jpg?s=b77643f34b1369553c27d277bff3ccf2"
        key="23539"
        mal_id={23539}
        title="Gudetama"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/6/13508.jpg?s=0291c4832f41af34747d772c31526e68"
        key="6149"
        mal_id={6149}
        title="Chibi Maruko-chan (1995)"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1629/93729.jpg?s=41b57ae7b52d32986bd11de6d2a2f0aa"
        key="38235"
        mal_id={38235}
        title="Inazuma Eleven: Orion no Kokuin"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/13/87181.jpg?s=30409b8044a2939e3cb59c96ea7f3508"
        key="36064"
        mal_id={36064}
        title="Fate/Grand Order CMs"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1670/93590.jpg?s=2fc4ff4e22d52ec268b6f0b0d887f32a"
        key="38250"
        mal_id={38250}
        title="Xiao Lu He Xiao Lan"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1973/95616.jpg?s=76553c857f9850aa1f82527963291839"
        key="35847"
        mal_id={35847}
        title="SSSS.Gridman"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1408/96485.jpg?s=20fae3c4daea59a8e90d71ce1657138e"
        key="37476"
        mal_id={37476}
        title="Cardfight!! Vanguard (2018)"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1555/93865.jpg?s=6c8b8f5f46c39d9c6d3313ce986ade6d"
        key="36317"
        mal_id={36317}
        title="Gaikotsu Shotenin Honda-san"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1198/90430.jpg?s=d5ff39ae6932fc20c69f96e8d1dc3b32"
        key="37204"
        mal_id={37204}
        title="Aikatsu Friends!"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1445/95414.jpg?s=ddbd615d070fa37fac56f5f501e6df2c"
        key="38491"
        mal_id={38491}
        title="Xing Chen Bian"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/6/74028.jpg?s=a8002672b2eccb5cbf43f356d5de87b5"
        key="1199"
        mal_id={1199}
        title="Nintama Rantarou"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/2/84270.jpg?s=56facbc831546691107de27849b1f127"
        key="34535"
        mal_id={34535}
        title="Koisuru Shirokuma"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/3/27302.jpg?s=76cbb276fb39aa4e8ddd6d8303dc4218"
        key="9874"
        mal_id={9874}
        title="Touhou Niji Sousaku Doujin Anime: Musou Kakyou"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1402/95620.jpg?s=3075a58e5da0220977ba5d572cd30e9d"
        key="37597"
        mal_id={37597}
        title="Dakaretai Otoko 1-i ni Odosarete Imasu."
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1115/90222.jpg?s=a9ca5ddcc45681bab39a421264d3435b"
        key="37023"
        mal_id={37023}
        title="Layton Mystery Tanteisha: Katri no Nazotoki File"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/12/85484.jpg?s=a68d6868f07602c073985f50955caac3"
        key="21305"
        mal_id={21305}
        title="Trick or Alice"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1827/95738.jpg?s=d5d300be5ca7a5a61387e26b9acc4198"
        key="37716"
        mal_id={37716}
        title="Beelzebub-jou no Okinimesu mama."
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/1470/90266.jpg?s=ffd8832a519a87dbe9598fcb26beb2f7"
        key="34941"
        mal_id={34941}
        title="Queen's Blade: Unlimited"
      />
      <WithStyles(AnimePreview)
        image_url="https://cdn.myanimelist.net/images/anime/9/84460.jpg?s=ae561b0c245d07556cbdfbbf1ee374a9"
        key="34566"
        mal_id={34566}
        title="Boruto: Naruto Next Generations"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/1469/98067.jpg?s=65207cbfdb750ef709b6361a8085b151"
        key="38431"
        mal_id={38431}
        title="Persona 5 the Animation Specials"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/1115/90222.jpg?s=a9ca5ddcc45681bab39a421264d3435b"
        key="37023"
        mal_id={37023}
        title="Layton Mystery Tanteisha: Katri no Nazotoki File"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/1937/98538.jpg?s=c097089acd75a53cde08a4d7cfcb978c"
        key="39094"
        mal_id={39094}
        title="Toaru Majutsu no Index-tan III"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/1349/93309.jpg?s=4efc47cf0775a86cc48082d23dc974ae"
        key="38050"
        mal_id={38050}
        title="Shoujo☆Kageki Revue Starlight Specials"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/2/88336.jpg?s=91adfb36d2c14c84ca2bd10489cdaad8"
        key="34572"
        mal_id={34572}
        title="Black Clover"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/1861/91089.jpg?s=ef9f0499f6a4b89b25afde4c9840a7cd"
        key="37490"
        mal_id={37490}
        title="Gyakuten Saiban: Sono \\"Shinjitsu\\", Igi Ari! Season 2"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/1826/91440.jpg?s=312d0fa9b286e73ff38621e53ed4092b"
        key="37618"
        mal_id={37618}
        title="Meng Qi Shi Shen"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/12/85484.jpg?s=a68d6868f07602c073985f50955caac3"
        key="21305"
        mal_id={21305}
        title="Trick or Alice"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/11/78304.jpg?s=0b38ecb3f06eb2872e5e3f2413638b0a"
        key="32152"
        mal_id={32152}
        title="Closers: Side Blacklambs"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/5/89006.jpg?s=8cf9d53ae1c262c0d22f2b8652c279ec"
        key="36805"
        mal_id={36805}
        title="Kirara Fantasia"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/11/84673.jpg?s=06c032612ee4b5a437e752a74d86b939"
        key="34034"
        mal_id={34034}
        title="Pokemon Sun & Moon"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/9/84460.jpg?s=ae561b0c245d07556cbdfbbf1ee374a9"
        key="34566"
        mal_id={34566}
        title="Boruto: Naruto Next Generations"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/1914/95106.jpg?s=ff6914b6767f741eac4b2c09644e31e7"
        key="38425"
        mal_id={38425}
        title="Ikkitousen: Western Wolves"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/1475/96180.jpg?s=c8a6276e75dae64bc24bffb49de468c4"
        key="38062"
        mal_id={38062}
        title="Endro~!"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/1644/93213.jpg?s=7ce7fd0f7b8e95ae7135444a74771840"
        key="38022"
        mal_id={38022}
        title="Monster Strike The Animation"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/1273/93610.jpg?s=f16726aecfa43e5bd8cf85a2df31e891"
        key="37140"
        mal_id={37140}
        title="Gegege no Kitarou (2018)"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/8/88842.jpg?s=6327f2804ec56ea284c26640066927cd"
        key="36742"
        mal_id={36742}
        title="Koisuru Shirokuma Tokubetsu-ban"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/1370/97026.jpg?s=1a3b2628a9a374756728995f9e163653"
        key="36483"
        mal_id={36483}
        title="B-Project: Zecchou*Emotion"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/7/83025.jpg?s=80120d4228551219166b83d3b06d6260"
        key="34454"
        mal_id={34454}
        title="Granblue Fantasy"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/4/75803.jpg?s=63e0c29ed3b93a2ca858a1b84cfe3aa2"
        key="15407"
        mal_id={15407}
        title="Magical Suite Prism Nana"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/1468/90508.jpg?s=fd0973cb362c0f22bb55ad3bbff1c18f"
        key="37292"
        mal_id={37292}
        title="Fei Ren Zai"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/1470/90266.jpg?s=ffd8832a519a87dbe9598fcb26beb2f7"
        key="34941"
        mal_id={34941}
        title="Queen's Blade: Unlimited"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/13/84901.jpg?s=20555eb45936b9c66068cdba64df057c"
        key="34866"
        mal_id={34866}
        title="Yu☆Gi☆Oh! VRAINS"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/1072/90600.jpg?s=9c37377010afa365f6f6871481e8b4e4"
        key="37324"
        mal_id={37324}
        title="Youkai Watch: Shadow Side"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/1/1960.jpg?s=9906f3d0872d54e27b801f5302bfd99d"
        key="1960"
        mal_id={1960}
        title="Sore Ike! Anpanman"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/1263/93685.jpg?s=3120365a12c2b8d6f8022b5b07c16304"
        key="37589"
        mal_id={37589}
        title="Ano Hi no Kanojo-tachi"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/12/72084.jpg?s=a7a9eb04735975086dab48a96a44f4dc"
        key="30088"
        mal_id={30088}
        title="Ryoutei no Aji"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/1628/95071.jpg?s=5cb24ab512e29fb01c75226786cb2d74"
        key="37178"
        mal_id={37178}
        title="Kiratto Pri☆chan"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/1367/95055.jpg?s=3c6750f60915aa577e2b9b542bbaf19e"
        key="37739"
        mal_id={37739}
        title="Future Card Shin Buddyfight"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/1086/91130.jpg?s=b327d9994479d08d29f57514e2497fd2"
        key="37283"
        mal_id={37283}
        title="Beyblade Burst Chouzetsu"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/1580/95199.jpg?s=bc00b029432b4fe9ae0501a6dc6bea31"
        key="31537"
        mal_id={31537}
        title="Manaria Friends"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/10/68209.jpg?s=5f49d81e38eddd67c0007083716370f9"
        key="28205"
        mal_id={28205}
        title="Fastening Days"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/1993/96614.jpg?s=ea1f09146c5f928663b9a9ec1d103253"
        key="37979"
        mal_id={37979}
        title="Mahou Shoujo Tokushusen Asuka"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/1276/96178.jpg?s=08991449b64708dd93194fad56852fb5"
        key="37920"
        mal_id={37920}
        title="Ueno-san wa Bukiyou"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/1302/91296.jpg?s=909a87e72cccf6f847c616857f083e1a"
        key="35011"
        mal_id={35011}
        title="Yankee Hamster"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/1318/95345.jpg?s=12cbeeb5b4514678c3eb9ad7a0d9f16f"
        key="37202"
        mal_id={37202}
        title="Radiant"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/13/77617.jpg?s=6d93d141230cedde46430e1f48b3dbdb"
        key="32353"
        mal_id={32353}
        title="Bonobono (2016)"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/1205/96175.jpg?s=a445f8abac3b84da0c5d6b115ff35fa2"
        key="34209"
        mal_id={34209}
        title="Meiji Tokyo Renka"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/5/85616.jpg?s=f1535ebd0a88fad1c67bf02ef52a37b8"
        key="35516"
        mal_id={35516}
        title="Dappys"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/2/8519.jpg?s=0ac28ac2d6b372bbb9b7039d57da0dbf"
        key="4459"
        mal_id={4459}
        title="Ojarumaru"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/1252/96179.jpg?s=56d63ad70b35ba9bedb121fe8a096360"
        key="38301"
        mal_id={38301}
        title="Kouya no Kotobuki Hikoutai"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/3/85020.jpg?s=348b5271aee315051a1a6b2ea948ff8d"
        key="35300"
        mal_id={35300}
        title="Magia Record: Mahou Shoujo Madoka☆Magica Gaiden PV"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/7/75624.jpg?s=c9bb11549550d1098774fdc99729491a"
        key="28921"
        mal_id={28921}
        title="Disney Tsum Tsum"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/9/25502.jpg?s=8590617beefa21fb62968bb408f7ac8b"
        key="2406"
        mal_id={2406}
        title="Sazae-san"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/4/85685.jpg?s=9a67ad2de2c30c78ca20097fd5b476bb"
        key="35552"
        mal_id={35552}
        title="Pokemon Daisuki Club"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/13/72448.jpg?s=51f8a55001a911e4ce2dd3106f14ea3e"
        key="29643"
        mal_id={29643}
        title="6HP (Six Hearts Princess)"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/2/55107.jpg?s=434dad46b1fa66a5fbd272cf2f699ee3"
        key="7505"
        mal_id={7505}
        title="Knyacki!"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/1022/93948.jpg?s=dca76f3b2ceb7f95e72a7b583e7d63bf"
        key="34539"
        mal_id={34539}
        title="Saint Seiya: Saintia Shou"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/1851/98296.jpg?s=b32abcb285b10369ead3fd76a9bacc35"
        key="39022"
        mal_id={39022}
        title="Ling Feng Zhe"
      />
      <WithStyles(AnimePreview)
        image_url="https://myanimelist.cdn-dena.com/images/anime/1311/93281.jpg?s=3ad2c4780350164b22c763129f2e850f"
        key="38089"
        mal_id={38089}
        title="Okoshiyasu, Chitose-chan"
      />
    </WithStyles(Grid)>
  </div>
</InfiniteScroll>
`;
